# RapidBA

./: BundleSolver.cpp  BundleSolver.cu  BundleSolver.h  CMakeLists.txt  DiscreteModel.cpp  DiscreteModel.h  GroupModel.cpp  GroupModel.h  GroupModelTypes.cpp  GroupModelTypes.h  ModelFilter.cpp  ModelFilter.h  RapidBA.cpp  RapidBA.h  UniversalModel.cpp  UniversalModel.h  computeHessian.cu  computeHessian.h  computeSchur.cu  computeSchur.h  containers.h  csr.h  derivative.h  derivative.py  derivative2.py  fwd.h  kernel.h  kmat.h  ldg.cuh  main.cpp  smemAccUtils.h  transpose.cuh  utils_general.h  utils_host.h  utils_kernel.h
blockSolvers/: HessianSolver.cpp  HessianSolver.h  HessianSolverExplicitSchurPCG.cpp  HessianSolverExplicitSchurPCG.h  SchurSolver.cpp  SchurSolver.h  SchurSolverPCG.cpp  SchurSolverPCG.h  solveHessian.h  solveSchurPCG.cu  solveSchurPCG.h  solverHessian.cu
doc/: todo.txt
test/: BundleSolverTest.cpp  DeltaBTestAndDampTest.cpp  DerivativeTest.cpp  HessianTest.cpp  PCGTest.cpp  PerfTest.cpp  ReduceTest.cpp  SchurTest.cpp  TestModel.cpp  TestModel.h  UtilsTest.cpp  utils_test.cpp  utils_test.h
traits/: Traits.h  base.h  capture.h  intrinsic.h  pubParamConvert.h
